# gestion-banque

./: .gitignore  Banque.sql  CMakeLists.txt  Projet_fr_FR.ts  README.md  achrat.qrc  database.sql  depot.cpp  depot.h  depot.hpp  depot.ui  dialog.cpp  dialog.h  dialog.hpp  dialog.ui  epargne.cpp  epargne.h  epargne.ui  fermer_compte.cpp  fermer_compte.h  fermer_compte.hpp  fermer_compte.ui  fr_FR.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  numero_compte.cpp  numero_compte.h  numero_compte.hpp  numero_compte.ui  retrait.cpp  retrait.h  retrait.hpp  retrait.ui  solde_compte.cpp  solde_compte.h  solde_compte.hpp  solde_compte.ui  (+3 more)
Client/: Client.cpp  Client.hpp
Graphic/: SFML.cpp  a.out
db/: Boursorama.db  a.out  sql.cpp
